@@ -1,36 +1,6 @@
-# $Id: Makefile 2137 2011-11-10 13:09:30Z jkoshy $
+# $Id: Makefile 3028 2014-04-18 16:20:43Z jkoshy $
 
-TOP = ../..
-
-.include "${TOP}/mk/elftoolchain.tetvars.mk"
-
-.if !defined(TET_EXECUTE)
-TET_EXECUTE=	${.OBJDIR}
-.endif
-
-.if make(tccbuild)
-TET_OPTIONS+=	-b
-.endif
-
-.if make(tccclean)
-TET_OPTIONS+=	-c
-.endif
-
-.if make(execute) || make(test)
-TET_OPTIONS+=	-e
-.endif
-
-.MAIN: all
-
-.PHONY:	clobber execute tccbuild tccclean test
-
-execute tccbuild tccclean test:
-	TET_ROOT=${TET_ROOT} TET_EXECUTE=${TET_EXECUTE} \
-		TET_SUITE_ROOT=${.CURDIR} ${TET_ROOT}/bin/tcc ${TET_OPTIONS} .
-
-clobber:	clean
-	rm -rf ${TET_RESULTS_DIR} ${TET_TMP_DIR}
-
+TOP=		../..
 SUBDIR=		tset
 
-.include <bsd.subdir.mk>
+.include "${TOP}/mk/elftoolchain.tetbase.mk"
